--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Validation - Easy Tutorials YouTube Channel</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/c4254e24a8.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -16,35 +18,40 @@
             <div class="input-group">
                 <label>Full Name</label>
                 <input type="text" placeholder="Enter your name">
+                <span id="name-error"></span>
             </div>
 
             <div class="input-group">
                 <label>Phone No.</label>
                 <input type="tel" placeholder="123 456 7890">
+                <span id="phone-error"></span>
             </div>
 
             <div class="input-group">
                 <label>Email Id</label>
                 <input type="email" placeholder="Enter Email">
+                <span id="email-error"></span>
             </div>
 
             <div class="input-group">
                 <label>Your Message</label>
                 <textarea rows="5" placeholder="Enter your message"></textarea>
+                <span id="message-error"></span>
             </div>
 
             <button>Submit</button>
+                <span id="submit-error"></span>
 
         </form>
 
-
+<!-- 
         <div class="useful-links">
             <a href="https://youtu.be/fz8bwvn9lA4">Watch Video</a>
             <a href="https://www.youtube.com/c/EasyTutorialsVideo?sub_confirmation=1">Visit Channel</a>
-        </div>
+        </div> -->
 
     </div>
 
-</body>
+</body> 
 
 </html>
